# ipv4calc

./: .gitignore  CMakeLists.txt  compile_commands.json  ipv4calc.cpp  ipv4calc.h  ipv4utils.cpp  main.cpp
test/: check_mod.c  testcidr.cpp  tobinner.cpp
